--- a/views/users/orderDetails.ejs
+++ b/views/users/orderDetails.ejs
@@ -186,6 +186,7 @@
               <p><strong>State:</strong> <%= order.deliveryAddress.state %></p>
               <p><strong>Country:</strong> <%= order.deliveryAddress.country %></p>
               <p><strong>Postal Code:</strong> <%= order.deliveryAddress.pinCode %></p>
+              <p><strong>Mobile Number:</strong> <%= order.deliveryAddress.mobileNumber %></p>
             <% } else { %>
               <p>Shipping address is unavailable.</p>
             <% } %>
