--- a/public/css/dash.css
+++ b/public/css/dash.css
@@ -9,7 +9,7 @@
 .sidebar ul {
   list-style-type: none;
   padding: 0;
-  
+
 }
 
 .sidebar ul li {
@@ -30,36 +30,42 @@
   border-radius: 5px;
   color: #ffffff;
 }
-.sdashbord{
+
+.sdashbord {
   background-color: #406350;
 }
 
-.dash-box{
+.dash-box {
   border: 1px solid black;
   background-color: rgba(209, 209, 209, 0.713);
   padding: 5px;
   border-radius: 5px;
 }
-.dashP{
-  font-family: "Marmelad", serif; 
-  font-style: normal; 
+
+.dashP {
+  font-family: "Marmelad", serif;
+  font-style: normal;
 }
-.dashpbox{
+
+.dashpbox {
   border: 1px solid black;
   padding: 2%;
   border-radius: 5px;
 }
-.dasaddedit{
+
+.dasaddedit {
   background-color: rgb(50, 109, 50);
   border: 1px solid black;
   width: 76px;
   border-radius: 5px;
-  color:white ;
+  color: white;
   padding: 8px;
 }
-.dasaddedit:hover{
-  background-color: rgb(83, 131, 83) ;
+
+.dasaddedit:hover {
+  background-color: rgb(83, 131, 83);
 }
+
 .sidebardash ul li a {
   display: block;
   padding: 10px 15px;
@@ -76,65 +82,80 @@
   background-color: green;
   color: white;
 }
-.add-address{
+
+.add-address {
   background-color: rgb(50, 109, 50);
   border: 1px solid black;
   width: 76px;
   border-radius: 5px;
-  color:white ;
+  color: white;
   padding: 5px;
   margin-bottom: 5px;
 }
-.address-box{
+
+.address-box {
   border: 1px solid black;
-  padding:2%;
+  padding: 2%;
   border-radius: 5px;
   margin-bottom: 5px;
 
 }
-.add-address:hover{
+
+.add-address:hover {
   background-color: rgb(83, 131, 83);
-  
+
 }
-.edit-remove-div{
-  display: flex;  
+
+.edit-remove-div {
+  display: flex;
   width: 15%;
   justify-content: space-between;
   border: none;
 }
 
-.edit-address{
+.edit-address {
   background-color: rgb(50, 109, 50);
   border: 1px solid black;
   width: 76px;
   border-radius: 5px;
-  color:white ;
+  color: white;
   padding: 5px;
   margin-bottom: 5px;
 }
-.edit-address:hover{
+
+.edit-address:hover {
   background-color: rgb(83, 131, 83);
-  
+
 }
-.remove-address{
+
+.remove-address {
   background-color: rgb(184, 51, 51);
   border: 1px solid black;
   width: 76px;
   border-radius: 5px;
-  color:white ;
+  color: white;
   padding: 5px;
   margin-bottom: 5px;
 }
-.remove-address:hover{
+
+.remove-address:hover {
   background-color: rgb(186, 65, 65);
-  
+
 }
-.edit-address-btn{
+
+.edit-address-btn {
   background-color: rgb(50, 109, 50);
   border: 1px solid black;
   width: 76px;
   border-radius: 5px;
-  color:white ;
+  color: white;
   padding: 5px;
   margin-bottom: 5px;
+}
+
+.EmobileNumber,.mobileNumber {
+  width: 100%;
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #c1bcbc;
 }
