--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -61,6 +61,11 @@
               <span class="menu-title">Offer Management</span>
             </a>
           </li>
+          <li class="nav-item menu-items ">
+            <a class="nav-link" href="/admin/salesReport">
+              <span class="menu-title">sales Report</span>
+            </a>
+          </li>
         </ul>
       </nav>
       <!-- partial -->
